# all-in-one

./: .gitignore  README.md  package.json  run.ps1  vetur.config.js
desktop/: README.md  package.json
django/: pyproject.toml  runserver.py
django/config/: settings.py
dmailer/: README.md  pubspec.yaml
dmailer/android/app/: build.gradle
dmailer/ios/Runner/: Info.plist
dmailer/ios/Runner.xcodeproj/: project.pbxproj
dmailer/linux/: CMakeLists.txt  my_application.cc
dmailer/macos/Runner.xcodeproj/: project.pbxproj
dmailer/test/: widget_test.dart
dmailer/web/: index.html  manifest.json
dmailer/windows/: CMakeLists.txt
dmailer/windows/runner/: Runner.rc  main.cpp
ethme/: package.json
express/: index.ts
express/routes/: main.ts
flutter/: README.md  pubspec.yaml
flutter/android/app/: build.gradle
flutter/ios/Runner/: Info.plist
flutter/ios/Runner.xcodeproj/: project.pbxproj
flutter/lib/: main.dart
flutter/linux/: CMakeLists.txt  my_application.cc
flutter/macos/Runner.xcodeproj/: project.pbxproj
flutter/test/: widget_test.dart
flutter/web/: index.html  manifest.json
flutter/windows/: CMakeLists.txt
flutter/windows/runner/: Runner.rc  main.cpp
inroad/: App.tsx  app.json  package.json
inroad/android/: settings.gradle
inroad/android/app/: _BUCK  build.gradle
inroad/ios/: Podfile
node/: .gitignore  package.json  tsconfig.json
react-native/: app.json  package.json
react-native/android/: settings.gradle
react-native/ios/: Podfile
web/: package-lock.json  package.json
web/pages/: index.tsx
(+46 files in other folders)
