[tool.poetry]
name = "aio_django"
version = "0.1.0"
description = "Django version for all in one Project"
authors = ["Roman-Ojha <razzroman98@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.13.1"
autopep8 = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
